Revert "Alter for CIN 2020"
This reverts commit 06b7fa053500b1d05bb440aac65212984086a654.

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -42,14 +42,14 @@
   </div>
   {{end}}
   {{if .PageContext.CIN}}
-  <div id="index-videos" class="container-fluid container-padded pb-0 bg-cin videos-container">
+  <div id="index-videos" class="container-fluid container-padded pb-0 bg-cin">
     <h2 class="cin-text">URY Candidate Interview Night</h2>
     <div id="cin-videos" class="row scroll-horiz pb-3 custom-scrollbar-cin thumbnail-slider">
     </div>
   </div>
   {{end}}
   {{with .PageData}}
-  <div id="index-videos" class="container-fluid container-padded pb-0 bg-sessions videos-container">
+  <div id="index-videos" class="container-fluid container-padded pb-0 bg-sessions">
     <h2>URY Sessions</h2>
     <div id="sessions-videos" class="row scroll-horiz pb-3 custom-scrollbar-music thumbnail-slider">
     </div>
