--- a/sass/base/_backgrounds.scss
+++ b/sass/base/_backgrounds.scss
@@ -60,28 +60,13 @@
 }
 
 .bg-cin {
-  //background: $cin-background;
+  background: $cin-background;
 }
-
-.bg-cin.videos-container {
-  background: url("/images/background THING-smol.jpg") top center repeat;
-  background-size: cover;
-}
-
-.cin {
-  @media all and (max-device-width: 960px) {
-    background-image: url("/images/background THING-0.5.jpg");
-  }
-  @media all and (max-device-width: 1440px) {
-    background-image: url("/images/background THING-0.75.jpg");
-  }
-  background: url("/images/background THING.jpg") repeat top center;
-  background-size: cover;
-}
-
 
 .bg-cin-gif {
-    color: $cin-primary;
+  background: url("/images/holdingcard.gif") center center no-repeat;
+  background-size: cover;
+  color: $cin-primary;
   // Padding for mobile
   padding: calc(5em + 60px) 0 5em;
 
@@ -89,9 +74,5 @@
   @include media-breakpoint-up(md) {
   // Remove the height of the nav bar roughly 60px
     padding: calc(5em + 60px) 0 5em;
-  }
-
-  a {
-    color: $cin-primary;
   }
 }
