--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -73,7 +73,7 @@
       <div> {{/* Prevents bug where p would appear inline with h2 */}}
         <p>Getting your own show or podcast is really easy! Just take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>, if you can see a gap, there's no reason you couldn't fill it!</p>
         <p>Once you have completed the steps above, you will be able to sign up to training! In <a href="//ury.org.uk/myradio">MyRadio</a> head to the "Get On Air" section, then click "Get Studio Trained" and take your pick of training sessions, click join and you are good to go! If there aren't any slots available, email our Training Co-ordinator at <a href="mailto:training@ury.org.uk" title="Email our Training Co-ordinator">training@ury.org.uk</a>.</p>
-        <p>During training, we will show you how to use the studio and how to apply for a show or podcast. If you want to brainstorm ideas with our team, then head to <a href="{{url "/teams/presenting/"}}" title="Have a look at what the presenting and production team does!">Production</a> Meeting, which is at 8pm every Monday in V/N/123a!</p>
+        <p>During training, we will show you how to use the studio and how to apply for a show or podcast. If you want to brainstorm ideas with our team, then head to <a href="{{url "/teams/production/"}}" title="Have a look at what the production team does!">Production</a> Meeting, which is at 8pm every Monday in V/N/123a!</p>
     </div>
     </div>
 </div>
