--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -3,6 +3,12 @@
   {{if .PageContext.Christmas}}
     <div class="snow"></div>
   {{end}}
+  {{if .PageContext.AprilFools}}
+    <div id="april-fool">
+      <iframe src="http://brookehatton.com/dvd-screensaver/src" width="100%" height="100%"></iframe>
+      <script src='{{url "js/april-fools.js"}}'></script>
+    </div>
+  {{end}}
   {{with .PageData}}
     <div class="container">
       <div class="row justify-content-center">
