--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -5,7 +5,7 @@
   {{end}}
   {{if .PageContext.AprilFools}}
     <div id="april-fool">
-      <iframe src="http://brookehatton.com/dvd-screensaver/src" width="100%" height="100%"></iframe>
+      <iframe src="https://brookehatton.com/dvd-screensaver/src" width="100%" height="100%"></iframe>
       <script src='{{url "js/april-fools.js"}}'></script>
     </div>
   {{end}}
