--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,4 +1,7 @@
 {{define "content"}}
+  {{if .PageContext.ISTORN2020}}
+    {{template "istorn2020_countdown" .}}
+  {{end}}
   <div class="container-fluid header-large current-next position-relative">
   {{if .PageContext.Christmas}}
     <div class="snow"></div>
@@ -101,6 +104,7 @@ var youtubeCINPlaylistID = "{{.PageContext.Youtube.CINPlaylistID}}";
 var isIndex = true;
 var isCIN = false;
 var isOD = false;
+var isISTORN2020 = true;
 </script>
 <script src='{{url "js/index.js"}}'></script>
 <script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
