--- a/views/elements/istorn2020_countdown.tmpl
+++ b/views/elements/istorn2020_countdown.tmpl
@@ -1,4 +1,7 @@
 {{define "istorn2020_countdown"}}
+  <video autoplay muted loop id="istorn020_bg">
+    <source src="images/istorn_bg.mp4" type="video/mp4" />
+  </video>
   <div class="istorn2020-countdown">
     <div class="row align-items-center text-center">
       <div class="col">
