--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -99,6 +99,58 @@ $breakpoints: sm, md, lg, xl;
   color: $cin-primary;
 }
 
+.istorn2020-countdown {
+  height: 100vh !important;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  .callout {
+    color: #c9c9c9;
+    font-size: 1.8rem;
+    font-style: italic;
+    font-family: Raleway, Roboto, sans-serif;
+  }
+}
+
+.istorn-countdown {
+  display: inline-block;
+  //background-color: white;
+  font-family: "Raleway", sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: white;
+  padding: 0.15em;
+  //letter-spacing: 0.4rem;
+  //border: 2px solid $cin-primary;
+  .smol {
+    font-size: 50%;
+  }
+}
+
+#istorn020_bg {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -100;
+  background-color: #002d5a;
+}
+
+.bg-cin .col {
+  max-width: 100vw;
+}
+
+.cin-social {
+  @media screen and (max-width: map_get($grid-breakpoints, "md")) {
+    margin: 1em;
+  }
+}
 
 @media (min-width: 1600px) {
   .container {
