--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -106,6 +106,6 @@ var isCIN = {{if .PageContext.CIN}}true{{else}}false{{end}};
 var isOD = false;
 var isISTORN2020 = {{if .PageContext.ISTORN2020}}true{{else}}false{{end}};
 </script>
-<script src='{{url "js/index.js"}}'></script>
+<script src='{{url "js/index.js"}}?ver={{ .PageContext.CacheBuster }}'></script>
 <script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
 {{end}}
