Bust ALL the things!

--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -34,7 +34,7 @@
     {{end}}
 </div>
 <div class="container-fluid bg-cin">
-  
+
 </div>
 <div id="index-videos" class="container-fluid container-padded bg-cin">
     <div id="cin-videos" class="row pb-3 youtube-grid">
@@ -53,6 +53,6 @@ var isIndex = false;
 var isCIN = true;
 var isOD = false;
 </script>
-<script src='{{url "/js/index.js"}}'></script>
+<script src='{{url "/js/index.js"}}?ver={{ .PageContext.CacheBuster }}'></script>
 <script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
 {{end}}
