--- a/views/podcast.tmpl
+++ b/views/podcast.tmpl
@@ -102,8 +102,8 @@
   </div>
 {{end}}
 {{define "footer-scripts"}}
-<script src="{{url "/js/show.js"}}"></script>
-<script src="{{url "/js/jquery.prettySocial.min.js"}}"></script>
+<script src="{{url "/js/show.js"}}?ver={{ .PageContext.CacheBuster }}"></script>
+<script src="{{url "/js/jquery.prettySocial.min.js"}}?ver={{ .PageContext.CacheBuster }}"></script>
 <script type="text/javascript" class="source">
   $(".prettySocial").prettySocial();
 </script>
