--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -174,7 +174,7 @@
 {{end}}
 
 {{define "footer-scripts"}}
-<script src="{{url "/js/jquery.prettySocial.min.js"}}"></script>
+<script src="{{url "/js/jquery.prettySocial.min.js"}}?ver={{ .PageContext.CacheBuster }}"></script>
 <script type="text/javascript" class="source">
   $(".prettySocial").prettySocial();
 </script>
