--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -28,11 +28,15 @@
       <div class="time-container">
         <div class="amplitude-play-pause" amplitude-song-index="0"></div>
         <div class="current-time">
-          <span class="amplitude-current-minutes" amplitude-song-index="0"></span>:<span class="amplitude-current-seconds" amplitude-song-index="0"></span>
+          <span class="amplitude-current-hours" amplitude-song-index="0"></span>:
+          <span class="amplitude-current-minutes" amplitude-song-index="0"></span>:
+          <span class="amplitude-current-seconds" amplitude-song-index="0"></span>
         </div>
         <progress class="amplitude-song-played-progress" amplitude-song-index="0" id="song-played-progress-1"></progress>
         <div class="duration">
-          <span class="amplitude-duration-minutes" amplitude-song-index="0">3</span>:<span class="amplitude-duration-seconds" amplitude-song-index="0"></span>
+          <span class="amplitude-duration-hours" amplitude-song-index="0"></span>:
+          <span class="amplitude-duration-minutes" amplitude-song-index="0"></span>:
+          <span class="amplitude-duration-seconds" amplitude-song-index="0"></span>
         </div>
       </div>
     </div>
@@ -51,7 +55,8 @@
                       https://ury.org.uk{{.Podcast.Photo}}
                 {{- else -}}
                       {{url "/images/default_show_profile.png"}}
-                {{- end -}}"
+                {{- end -}}
+              "
           },
       ]
   });
