--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -60,6 +60,16 @@
           },
       ]
   });
+  /*
+    Handles a click on the song played progress bar.
+  */
+  document.getElementById('song-played-progress-1').addEventListener('click', function( e ){
+    var offset = this.getBoundingClientRect();
+    var x = e.pageX - offset.left;
+
+    Amplitude.setSongPlayedPercentage( ( parseFloat( x ) / parseFloat( this.offsetWidth) ) * 100 );
+  });
+
 </script>
 <link rel="stylesheet" href="{{url "/css/podcast_player.css"}}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500">
