--- a/views/subtype.tmpl
+++ b/views/subtype.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}}{{.PageContext.ShortName}} | {{.PageContext.ODName}}{{end}}
+{{define "title"}}{{.PageContext.ShortName}} | {{.PageData.SubtypeAlias}}{{end}}
 
 {{define "open-graph"}}
 <meta name="twitter:card" content="summary_large_image">
@@ -17,12 +17,13 @@
   <div class="container">
     <div class="row align-items-center text-center">
       <div class="col">
-        <h1 class="display-3">{{.PageContext.ShortName}} {{.PageContext.ODName}}</h1>
-        <h2 class="display-5">{{.PageContext.Description}}</h2>
+        <h1 class="display-3">{{.PageContext.ShortName}} {{.PageData.SubtypeAlias}}</h1>
+        <h2 class="display-5">{{.PageData.Description}}</h2>
       </div>
     </div>
   </div>
 </div>
+
 <div id="index-just-missed" class="container-fluid container-padded bg-primary pb-0">
   <h2>Up soon...</h2>
   <div class="row custom-scrollbar scroll-horiz scroll-none-xl thumbnail-slider">
@@ -53,8 +54,6 @@
   </div>
 </div>
 
-
-
 <div id="index-podcasts" class="container-fluid container-padded pb-0 bg-podcasts">
   <h2>You just missed...</h2>
   <div class="row custom-scrollbar scroll-horiz thumbnail-slider">
@@ -78,6 +77,7 @@
     </div>
   </div>
 </div>
+{{end}}
 
 {{define "footer-scripts"}}
 <script src='{{url "/js/index.js"}}?ver={{ .PageContext.CacheBuster }}'></script>
