--- a/views/subtype.tmpl
+++ b/views/subtype.tmpl
@@ -25,9 +25,9 @@
 </div>
 
 <div id="index-just-missed" class="container-fluid container-padded bg-primary pb-0">
-  <h2>Up soon...</h2>
+  <h2>Coming up soon...</h2>
   <div class="row custom-scrollbar scroll-horiz scroll-none-xl thumbnail-slider">
-    {{range .PageData.LatestTimeslots}}
+    {{range .PageData.Upcoming}}
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
       <a class="ury-card " href="/schedule/shows/timeslots/{{.TimeslotID}}/">
         <div class="ury-card-img" style="background: url('
@@ -39,15 +39,15 @@
           " title="{{.Title}} Logo"></div>
         <div class="ury-card-body">
           <div class="ury-card-title">{{.Title}}</div>
-          <span class="ury-card-date">{{.StartTime.Format "15:04 - Mon"}} • {{formatDuration .Duration}}</span>
+          <span class="ury-card-date">{{.StartTime.Format "15:04 - 04/01/2001"}}</span>
         </div>
       </a>
     </div>
     {{end}}
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <a class="ury-card link" href="//mixcloud.com/ury1350/">
+      <a class="ury-card link" href="/schedule/">
         <div class="ury-card-body">
-          <div class="ury-card-lg-title">See more on Mixcloud...</div>
+          <div class="ury-card-lg-title">See more on our schedule...</div>
         </div>
       </a>
     </div>
@@ -57,21 +57,27 @@
 <div id="index-podcasts" class="container-fluid container-padded pb-0 bg-podcasts">
   <h2>You just missed...</h2>
   <div class="row custom-scrollbar scroll-horiz thumbnail-slider">
-    {{range .PageData.LatestPodcasts}}
-      <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-        <a class="ury-card podcast" href="{{.MicrositeLink.URL}}">
-          <div class="ury-card-img" style="background: url('https://ury.org.uk{{.Photo}}');" title="URY Podcast: {{.Title}} Logo"></div>
-          <div class="ury-card-body">
-            <div class="ury-card-title">{{.Title}}</div>
-            <span>{{.Time.Format "Monday, _2 Jan 2006"}}</span>
-          </div>
-        </a>
-      </div>
+     {{range .PageData.Recent}}
+    <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
+      <a class="ury-card " href="/schedule/shows/timeslots/{{.TimeslotID}}/">
+        <div class="ury-card-img" style="background: url('
+            {{- if .Season.ShowMeta.Photo -}}
+            https://ury.org.uk{{.Season.ShowMeta.Photo}}
+            {{- else -}}
+              {{url "/images/default_show_profile.png"}}
+            {{- end -}}');
+          " title="{{.Title}} Logo"></div>
+        <div class="ury-card-body">
+          <div class="ury-card-title">{{.Title}}</div>
+          <span class="ury-card-date">{{.StartTime.Format "15:04 - 04/01/2001"}}</span>
+        </div>
+      </a>
+    </div>
     {{end}}
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <a class="ury-card podcast link" href="{{url "/podcasts/"}}">
+      <a class="ury-card link" href="//mixcloud.com/ury1350/">
         <div class="ury-card-body">
-          <div class="ury-card-lg-title">See all podcasts...</div>
+          <div class="ury-card-lg-title">See more on Mixcloud...</div>
         </div>
       </a>
     </div>
