Fix typo in engineering section

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -42,7 +42,7 @@
       <h2>What Can I Do?</h2>
       <p>There’s something for everyone at URY! You don’t have to sign up at Freshers’ Fair or at the start of a term to get your very own show, or join any of our amazing teams:</p>
       <p>- If you want to present or produce radio, DJ, or record a podcast, we have brand new industry standard studios</p>
-      <p>- If you want to get involved with broadcast or sound <a href="{{url "/teams/engineering/"}}" title="Have a look at what the engineering team does!"> engineering</a>,It  we do lots of live events and also maintain our own studios all year round</p>
+      <p>- If you want to get involved with broadcast or sound <a href="{{url "/teams/engineering/"}}" title="Have a look at what the engineering team does!"> engineering</a>, we do lots of live events and also maintain our own studios all year round</p>
       <p>- If you’re interested in <a href="{{url "/teams/audio/"}}" title="Have a look at what the audio resources team does!">audio production</a>, we record sessions with local artists and design all of our own station sound</p>
       <p>- If you’re keen to develop your <a href="{{url "/teams/marketing/"}}" title="Have a look at what the marketing team does!">marketing skills</a>, we have social media accounts with thousands of followers and a national award nominated brand</p>
       <p>- If you want to try out web design or <a href="{{url "/teams/computing/"}}" title="Have a look at what the computing team does!">software engineering</a>, our website and backpages are designed and run in house</p>
