--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -190,32 +190,40 @@
   </div>
 </div> <!-- /outer containter -->
 {{if gt (len .Podcasts) 0}}
-  <div class="container-fluid p-4 bg-primary">
-    <div class="row">
-      <div class="col-12">
-        <h2>Podcasts</h2>
-        <p>We produce podcasts too! Give them a listen.</p>
-      </div>
+  <div class="container-fluid bg-primary">
+    <div class="container pt-3">
+      <h2>Podcasts</h2>
+      <p>We produce podcasts too! Give them a listen.</p>
+      <ul class="podcasts">
+      {{range .Podcasts}}
+        <li class="podcast-card box-shadow-1">
+          <img
+            class="podcast-card-image"
+            src="
+          {{if .Photo}}
+            https://ury.org.uk{{.Photo}}
+          {{else}}
+            {{url "/images/default_show_profile.png"}}
+          {{end}}
+            "
+            alt="Podcast photo"
+          />
+          <div class="podcast-card-body p-3">
+            <h3>
+              <a id="podcast" href="{{.MicrositeLink.URL}}">
+                {{- .Title -}}
+              </a>
+            </h3>
+            <span>{{.Time.Format "Monday, _2 Jan 2006"}}</span>
+            <div class="podcast-card-body-links">
+              <a>Download</a>
+
+            </div>
+          </div>
+        </li>
+      {{end}}
+      </ul>
     </div>
-    {{range .Podcasts}}
-      <div class="row podcast-card">
-        <img
-          class="col-3"
-          src="
-        {{if .Photo}}
-          https://ury.org.uk{{.Photo}}
-        {{else}}
-          {{url "/images/default_show_profile.png"}}
-        {{end}}
-          "
-          alt="Podcast photo"
-        />
-        <a class="col-9 py-2 text-center text-lg-left meta" id="podcast" href="{{.MicrositeLink.URL}}">
-          <h3>{{.Title}}</h3>
-          <span>{{.Time.Format "Monday, _2 Jan 2006"}}</span>
-        </a>
-      </div>
-    {{end}}
   </div>
 {{end}}
 {{end}}
