Use podcast background for consistency

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -190,7 +190,7 @@
   </div>
 </div> <!-- /outer containter -->
 {{if gt (len .Podcasts) 0}}
-  <div class="container-fluid bg-primary">
+  <div class="container-fluid bg-podcasts">
     <div class="container pt-3">
       <h2>Podcasts</h2>
       <p>We produce podcasts too! Give them a listen.</p>
