Fix margin at bottom of podcasts.

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -52,7 +52,7 @@
           <div class="col-auto share-links">
               <span class="h5 mg-right-5">Share:</span>
               <a href="#"
-                  title="Share this show episode on Twitter"
+                  title="Share this show on Twitter"
                   data-type="twitter"
                   data-url="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"
                   {{if .PageData.Show.Photo}}
@@ -64,7 +64,7 @@
               </a>
 
               <a href="#"
-                  title="Share this show episode on Facebook"
+                  title="Share this show on Facebook"
                   data-type="facebook"
                   data-url="{{.PageContext.FullURL}}/schedule/shows/{{.PageData.Show.ShowID}}"
                   data-title="{{.PageData.Show.Title}} | {{.PageContext.ShortName}}"
@@ -191,7 +191,7 @@
 </div> <!-- /outer containter -->
 {{if gt (len .Podcasts) 0}}
   <div class="container-fluid bg-podcasts">
-    <div class="container pt-3">
+    <div class="container pt-3 pb-1">
       <h2>Podcasts</h2>
       <p>We produce podcasts too! Give them a listen.</p>
       <ul class="podcasts">
@@ -217,7 +217,6 @@
             <span>{{.Time.Format "Monday, _2 Jan 2006"}}</span>
             <div class="podcast-card-body-links">
               <a>Download</a>
-
             </div>
           </div>
         </li>
