Change description to be more appropriate for podcast-only shows.

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -193,7 +193,7 @@
   <div class="container-fluid bg-podcasts">
     <div class="container pt-3 pb-1">
       <h2>Podcasts</h2>
-      <p>We produce podcasts too! Give them a listen.</p>
+      <p>This show comes in podcast form, enjoy this content whenever and wherever you like!</p>
       <ul class="podcasts">
       {{range .Podcasts}}
         <li class="podcast-card box-shadow-1">
