--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -13,7 +13,7 @@
 {{end}}
 <meta property="og:type" content="website">
 <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/schedule/shows/"}}{{.PageData.Show.ShowID}}">
-<meta property="og:description" content="{{.PageData.Show.Description}}">
+<meta property="og:description" content="{{ stripHtml .PageData.Show.Description}}">
 {{end}}
 
 {{define "content"}}
