--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -13,7 +13,7 @@
 {{end}}
 <meta property="og:type" content="website">
 <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/shows/timeslots/"}}{{.PageData.Timeslot.TimeslotID}}">
-<meta property="og:description" content="{{.PageData.Timeslot.Description}}">
+<meta property="og:description" content="{{ stripHtml .PageData.Timeslot.Description}}">
 {{end}}
 
 {{define "content"}}
