Add open graph to podcast embed player.

--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -3,6 +3,22 @@
 {{define "header-block"}}<!-- header -->{{end}}
 {{define "footer-block"}}<!-- footer -->{{end}}
 
+{{define "open-graph"}}
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@{{.PageContext.MainTwitter}}">
+<meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}">
+<meta property="og:locale" content="en_GB">
+<meta property="og:title" content="{{.PageContext.ShortName}} | {{.PageData.Podcast.Title}}">
+{{if .PageData.Podcast.Photo}}
+<meta property="og:image" content="{{.PageContext.FullURL}}{{url .PageData.Podcast.Photo}}">
+{{else}}
+<meta property="og:image" content="{{.PageContext.FullURL}}{{url "images/open_graph-general.jpg"}}">
+{{end}}
+<meta property="og:type" content="website">
+<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/podcasts/"}}{{.PageData.Podcast.PodcastID}}">
+<meta property="og:description" content="{{ stripHtml .PageData.Podcast.Description}}">
+{{end}}
+
 {{define "content"}}
 
 {{with .PageData}}
