--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -27,7 +27,7 @@
       <div class="col-12 col-sm-5 col-lg-3">
         <img class="img-fluid show-img" src="
         {{- if .Show.Photo -}}
-        https://ury.org.uk{{.Show.Photo}}
+          {{$.PageContext.FullURL}}{{.Show.Photo}}
         {{- else -}}
         {{url "/images/default_show_profile.png"}}
         {{- end -}}"
