--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -198,7 +198,7 @@
           <p>This show comes in podcast form, enjoy this content whenever and wherever you like!</p>
         </div>
         <div class="col-auto d-flex align-items-center">
-          <a href="" class="btn btn-primary"><i aria-hidden="true" class="fas fa-rss-square"></i> RSS Feed</a>
+          <a href="{{url "/schedule/shows/"}}{{.Show.ShowID}}/podcast_rss" class="btn btn-primary"><i aria-hidden="true" class="fas fa-rss-square"></i> RSS Feed</a>
         </div>
       </div>
       <ul class="podcasts">
