--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -215,7 +215,7 @@
             "
             alt="Podcast photo"
           />
-          <div class="podcast-card-body p-3">
+          <div class="podcast-card-body p-2 p-md-3">
             <h3>
               <a class="podcast-link" href="{{url .MicrositeLink.URL}}">{{- .Title -}}</a>
             </h3>
