align images to the center for smaller phones

--- a/sass/elements/_show.scss
+++ b/sass/elements/_show.scss
@@ -30,6 +30,7 @@ $cardSize: 8em;
     img {
       height: $cardSize;
       width: $cardSize;
+      align-self: center;
     }
 
     .podcast-card-body {
