hide images on small devices

--- a/sass/elements/_show.scss
+++ b/sass/elements/_show.scss
@@ -31,6 +31,10 @@ $cardSize: 8em;
       height: $cardSize;
       width: $cardSize;
       align-self: center;
+
+      @include media-breakpoint-down(xs) {
+        display: none;
+      }
     }
 
     .podcast-card-body {
