--- a/views/podcast.tmpl
+++ b/views/podcast.tmpl
@@ -50,6 +50,14 @@
         </div>
         <div class="col-12 col-lg-9">
           <h1>{{.Podcast.Title}}</h1>
+          {{if ne .Podcast.Show nil}}
+            <h3>
+              Brought to you by
+              <a href="{{$.PageContext.FullURL}}{{url "/schedule/shows/"}}{{.Podcast.Show.ShowID}}">
+                {{.Podcast.Show.Title}}
+              </a>
+            </h3>
+          {{end}}
           <h5 class="text-muted">{{.Podcast.Time.Format "Monday, _2 Jan 2006"}}</h5>
           <hr>
           <iframe src="player/" class="uryplayer-podcast-embed" frameborder="0">
