--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -46,7 +46,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <h2><a href="mailto:newsroom@ury.org.uk" title="Email URY Newsroom">newsroom@ury.org.uk</a> <span class="slash-divider">/</span> <a href="//twitter.com/{{.PageContext.NewsTwitter}}" title="URY News Twitter" target="_blank">@{{.PageContext.NewsTwitter}}</a></h2>
+      <h2><a href="mailto:newsroom@ury.org.uk" title="Email URY Newsroom">newsroom@ury.org.uk</a> <span class="slash-divider">/</span> <a href="//twitter.com/{{.PageContext.NewsTwitter}}" title="URY News Twitter" target="_blank" rel="noopener noreferrer">@{{.PageContext.NewsTwitter}}</a></h2>
     </div>
   </div>
 </div>
