--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -57,11 +57,11 @@
         <p>If you’re ready to join URY right now, we have some very easy steps to get you started...</p>
         <dl>
           <dt>Pay Membership</dt>
-          <dd>The easiest way to pay membership is through the <a href="//yusu.org/activities/view/university-radio-york" target="_blank">yusu.org</a> website.</dd>
+          <dd>The easiest way to pay membership is through the <a href="//yusu.org/activities/view/university-radio-york" target="_blank" rel="noopener noreferrer">yusu.org</a> website.</dd>
           <dt>Sign Up To MyRadio</dt>
           <dd>MyRadio is our computer system for managing shows, members, and our mailing list. You can join MyRadio by completing the form below, it’s instant and of course there’s no commitment to do anything.</dd>
           <dt>Join Our Slack Team</dt>
-          <dd>Use <a href="//slack.com/is" title="Find out more about Slack!" target="_blank">Slack</a>; it's like Facebook Messenger but for URY team communication. Slack has the advantage of having a “channel” for each team, so you can join any channel and see what is happening. Our Slack team: <a href="//ury.slack.com" title="Join Our Slack Team" target="_blank">ury.slack.com</a> sign up using your university email address.</dd>
+          <dd>Use <a href="//slack.com/is" title="Find out more about Slack!" target="_blank" rel="noopener noreferrer">Slack</a>; it's like Facebook Messenger but for URY team communication. Slack has the advantage of having a “channel” for each team, so you can join any channel and see what is happening. Our Slack team: <a href="//ury.slack.com" title="Join Our Slack Team" target="_blank" rel="noopener noreferrer">ury.slack.com</a> sign up using your university email address.</dd>
         </dl>
         <p>You can also come and <a href='{{url "/contact#map"}}' title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
       </div>
