--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -11,9 +11,10 @@
     <link rel="manifest" href='{{url "/manifest.json"}}'>
     <link rel="mask-icon" href='{{url "/safari-pinned-tab.svg"}}" color="#003367'>
     <meta name="theme-color" content="#003367">
+    <meta name="description" content="{{.PageContext.SiteDescription}}">
 
     <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>
-
+    
     {{block "open-graph" .}}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@{{.PageContext.MainTwitter}}">
