better implementation of team officer count

--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -54,7 +54,7 @@
     </div>
     {{end}}
     {{end}}
-    {{if .OfficerCount}}
+    {{if len .Team.Officers}}
     <div class="container-fluid bg-secondary">
       <div class="container container-padded">
         <h2>Team Officers</h2>
